feat: add discord nickname to contact information

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <ul>
       <li><b>Email:</b>rednaxela659@gmail.com</li>
       <li><b>Telegram:</b>ElPsyKongroo1</li>
+      <li><b>Discord:</b>Alexandr (Sanechek1337)</li>
     </ul>
 
     <h2>3. About me:</h2>
