--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" >
     <meta
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    >
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" >
     <title>Rs School CV</title>
   </head>
   <body>
@@ -41,21 +41,21 @@
     </ul>
 
     <h2>5. Code Example</h2>
-    <code>
-      <p>const isEven = (number) => {</p>
-      <p>if (number === 1) return false;</p>
-      <p>if (number === 2) return true;</p>
-      <p>if (number === 3) return false;</p>
-      <p>if (number === 4) return true;</p>
-      <p>if (number === 5) return false;</p>
-      <p>if (number === 6) return true;</p>
-      <p>if (number === 7) return false;</p>
-      <p>if (number === 8) return true;</p>
-      <p>if (number === 9) return false;</p>
-      <p>if (number === 10) return true;</p>
-      <p>if ...</p>
-      <p>}</p>
-    </code>
+    <pre>
+      const isEven = (number) => {
+      if (number === 1) return false;
+      if (number === 2) return true;
+      if (number === 3) return false;
+      if (number === 4) return true;
+      if (number === 5) return false;
+      if (number === 6) return true;
+      if (number === 7) return false;
+      if (number === 8) return true;
+      if (number === 9) return false;
+      if (number === 10) return true;
+      if ...
+      }
+    </pre>
 
     <h2>6. Work Experience</h2>
     <p>I have 2 month work experience as Frontend developer.</p>
