--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <h2>5. Code Example</h2>
     <pre>
-      const isEven = (number) => {
+      const isEven = (number) =&gt; {
       if (number === 1) return false;
       if (number === 2) return true;
       if (number === 3) return false;
