feat: add main tag and add styles for main, decrease h1 font size

--- a/index.html
+++ b/index.html
@@ -11,35 +11,38 @@
     <title>Rs School CV</title>
   </head>
   <body>
-    <h1 class="fullname">Lyan Alexandr</h1>
+    <main>
+      <h1 class="fullname">Lyan Alexandr</h1>
 
-    <h2>2. Contact Information:</h2>
-    <ul>
-      <li><b>Email:</b>rednaxela659@gmail.com</li>
-      <li><b>Telegram:</b>ElPsyKongroo1</li>
-      <li><b>Discord:</b>Alexandr (Sanechek1337)</li>
-    </ul>
+      <p class="position">Front-End Developer</p>
 
-    <h2>3. About me:</h2>
-    <p>
-      I work as a front-end developer. I'm a self-taught programmer, I learned
-      from YouTube videos, some courses, documentation, etc. My current goal is
-      to become a more qualified specialist and continue to develop in the
-      front-end field.
-    </p>
+      <h2>2. Contact Information:</h2>
+      <ul>
+        <li><b>Email:</b>rednaxela659@gmail.com</li>
+        <li><b>Telegram:</b>ElPsyKongroo1</li>
+        <li><b>Discord:</b>Alexandr (Sanechek1337)</li>
+      </ul>
 
-    <h2>4. Skills:</h2>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JS/TS</li>
-      <li>React</li>
-      <li>Redux</li>
-      <li>Git</li>
-    </ul>
+      <h2>3. About me:</h2>
+      <p>
+        I work as a front-end developer. I'm a self-taught programmer, I learned
+        from YouTube videos, some courses, documentation, etc. My current goal
+        is to become a more qualified specialist and continue to develop in the
+        front-end field.
+      </p>
 
-    <h2>5. Code Example</h2>
-    <pre>
+      <h2>4. Skills:</h2>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JS/TS</li>
+        <li>React</li>
+        <li>Redux</li>
+        <li>Git</li>
+      </ul>
+
+      <h2>5. Code Example</h2>
+      <pre>
       const isEven = (number) =&gt; {
       if (number === 1) return false;
       if (number === 2) return true;
@@ -53,18 +56,20 @@
       if (number === 10) return true;
       if ...
       }
-    </pre>
+    </pre
+      >
 
-    <h2>6. Work Experience</h2>
-    <p>I have 2 month work experience as Frontend developer.</p>
+      <h2>6. Work Experience</h2>
+      <p>I have 2 month work experience as Frontend developer.</p>
 
-    <h2>7. Education</h2>
-    <p>I have bachelor and master degrees of Information Technology.</p>
+      <h2>7. Education</h2>
+      <p>I have bachelor and master degrees of Information Technology.</p>
 
-    <h2>8. Languages</h2>
-    <ul>
-      <li>Russian (native)</li>
-      <li>English (A2~B1)</li>
-    </ul>
+      <h2>8. Languages</h2>
+      <ul>
+        <li>Russian (native)</li>
+        <li>English (A2~B1)</li>
+      </ul>
+    </main>
   </body>
 </html>
