--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
 
       <p class="position">Front-End Developer</p>
 
+      <div class="contacts">
+        <div class="email-location-block">
+          <div class="email-location location">
+            <img src="./img/map-icon.svg" alt="map icon" />
+            <p>Kazakhstan, Kokshetau</p>
+          </div>
+          <div class="email-location email">
+            <img src="./img/email-icon.svg" alt="email icon" />
+            <p>rednaxela659@gmail.com</p>
+          </div>
+        </div>
+      </div>
+
       <h2>2. Contact Information:</h2>
       <ul>
         <li><b>Email:</b>rednaxela659@gmail.com</li>
