--- a/index.html
+++ b/index.html
@@ -23,10 +23,50 @@
             <img src="./img/map-icon.svg" alt="map icon" />
             <p>Kazakhstan, Kokshetau</p>
           </div>
+
           <div class="email-location email">
             <img src="./img/email-icon.svg" alt="email icon" />
             <p>rednaxela659@gmail.com</p>
           </div>
+        </div>
+
+        <div class="social-links">
+          <a
+            class="social-link linkedin"
+            href="https://www.linkedin.com/in/lyan-alexandr/"
+            target="_blank"
+          >
+            <img src="./img/linkedin-logo.svg" alt="linkedin logo" />
+            /lyan-alexandr
+          </a>
+
+          <a
+            class="social-link tg"
+            href="https://t.me/ElPsyKongroo1"
+            target="_blank"
+          >
+            <img src="./img/tg-logo.svg" alt="telegram logo" />
+            @ElPsyKongroo1
+          </a>
+
+          <a
+            class="social-link github"
+            href="https://github.com/Sanechek1337"
+            target="_blank"
+          >
+            <img
+              src="./img/github-logo.svg"
+              alt="github logo"
+              width="14"
+              height="14"
+            />
+            /Sanechek1337
+          </a>
+
+          <a class="social-link discord" href="#">
+            <img src="./img/discord-logo.svg" alt="discord logo" />
+            Alexandr (Sanechek1337)
+          </a>
         </div>
       </div>
 
