feat: add horizontal divider

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
         </div>
       </div>
 
+      <div class="vertical-line"></div>
+
       <h2>2. Contact Information:</h2>
       <ul>
         <li><b>Email:</b>rednaxela659@gmail.com</li>
