--- a/index.html
+++ b/index.html
@@ -70,22 +70,20 @@
         </div>
       </div>
 
+      <div class="underheader-vertical-line"></div>
+
+      <div class="info-block about-me">
+        <h2 class="title about">About me</h2>
+
+        <p class="info about">
+          I work as a front-end developer. I'm a self-taught programmer, I
+          learned from YouTube videos, some courses, documentation, etc. My
+          current goal is to become a more qualified specialist and continue to
+          develop in the front-end field.
+        </p>
+      </div>
+
       <div class="vertical-line"></div>
-
-      <h2>2. Contact Information:</h2>
-      <ul>
-        <li><b>Email:</b>rednaxela659@gmail.com</li>
-        <li><b>Telegram:</b>ElPsyKongroo1</li>
-        <li><b>Discord:</b>Alexandr (Sanechek1337)</li>
-      </ul>
-
-      <h2>3. About me:</h2>
-      <p>
-        I work as a front-end developer. I'm a self-taught programmer, I learned
-        from YouTube videos, some courses, documentation, etc. My current goal
-        is to become a more qualified specialist and continue to develop in the
-        front-end field.
-      </p>
 
       <h2>4. Skills:</h2>
       <ul>
