feat: create education section

--- a/index.html
+++ b/index.html
@@ -73,14 +73,42 @@
       <div class="underheader-vertical-line"></div>
 
       <div class="info-block about-me">
-        <h2 class="title about">About me</h2>
+        <h2 class="title about-title">About me</h2>
 
-        <p class="info about">
+        <p class="info about-into">
           I work as a front-end developer. I'm a self-taught programmer, I
           learned from YouTube videos, some courses, documentation, etc. My
           current goal is to become a more qualified specialist and continue to
           develop in the front-end field.
         </p>
+      </div>
+
+      <div class="vertical-line"></div>
+
+      <div class="info-block education">
+        <h2 class="title education-title">Education</h2>
+
+        <div class="info">
+          <div class="education-info-block">
+            <p class="education-info">
+              Abay Myrzakhmetov Kokshetau University - Bachelor's degree, IT
+            </p>
+            <p class="date-info">
+              <img src="./img/calendar-icon.svg" alt="calendar icon" />
+              2018 - 2021
+            </p>
+          </div>
+
+          <div class="education-info-block master">
+            <p class="education-info">
+              Shokan Ualikhanov Kokshetau State University - Master's degree, IT
+            </p>
+            <p class="date-info">
+              <img src="./img/calendar-icon.svg" alt="calendar icon" />
+              2021 - 2023
+            </p>
+          </div>
+        </div>
       </div>
 
       <div class="vertical-line"></div>
