feat: create education section, rename some css classes

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         <h2 class="title education-title">Education</h2>
 
         <div class="info">
-          <div class="education-info-block">
-            <p class="education-info">
+          <div class="info-block-content">
+            <p class="text-info">
               Abay Myrzakhmetov Kokshetau University - Bachelor's degree, IT
             </p>
             <p class="date-info">
@@ -99,13 +99,41 @@
             </p>
           </div>
 
-          <div class="education-info-block master">
-            <p class="education-info">
+          <div class="info-block-content master">
+            <p class="text-info">
               Shokan Ualikhanov Kokshetau State University - Master's degree, IT
             </p>
             <p class="date-info">
               <img src="./img/calendar-icon.svg" alt="calendar icon" />
               2021 - 2023
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="vertical-line"></div>
+
+      <div class="info-block experience">
+        <h2 class="title experience-title">Experience</h2>
+
+        <div class="info">
+          <div class="info-block-content">
+            <p class="text-info">
+              Shokan Ualikhanov Kokshetau State University - Front-End Developer
+            </p>
+            <p class="date-info">
+              <img src="./img/calendar-icon.svg" alt="calendar icon" />
+              Sep 2023 - Present
+            </p>
+          </div>
+
+          <div class="info-block-content">
+            <p class="text-info">
+              Abay Myrzakhmetov Kokshetau University - System Technician
+            </p>
+            <p class="date-info">
+              <img src="./img/calendar-icon.svg" alt="calendar icon" />
+              Jul 2021 - Dec 2022
             </p>
           </div>
         </div>
