feat: create skills section

--- a/index.html
+++ b/index.html
@@ -141,15 +141,24 @@
 
       <div class="vertical-line"></div>
 
-      <h2>4. Skills:</h2>
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JS/TS</li>
-        <li>React</li>
-        <li>Redux</li>
-        <li>Git</li>
-      </ul>
+      <div class="info-block skills">
+        <h2 class="title skills-title">Skills</h2>
+
+        <div class="info">
+          <div class="skills-list">
+            <div class="skill">HTML</div>
+            <div class="skill">CSS</div>
+            <div class="skill">JavaScript</div>
+            <div class="skill">TypeScript</div>
+            <div class="skill">React</div>
+            <div class="skill">Redux</div>
+            <div class="skill">Git</div>
+            <div class="skill">Material UI</div>
+            <div class="skill">Mantine UI</div>
+            <div class="skill">NextJS</div>
+          </div>
+        </div>
+      </div>
 
       <h2>5. Code Example</h2>
       <pre>
