--- a/index.html
+++ b/index.html
@@ -160,23 +160,31 @@
         </div>
       </div>
 
-      <h2>5. Code Example</h2>
-      <pre>
-      const isEven = (number) =&gt; {
-      if (number === 1) return false;
-      if (number === 2) return true;
-      if (number === 3) return false;
-      if (number === 4) return true;
-      if (number === 5) return false;
-      if (number === 6) return true;
-      if (number === 7) return false;
-      if (number === 8) return true;
-      if (number === 9) return false;
-      if (number === 10) return true;
-      if ...
-      }
-    </pre
-      >
+      <div class="vertical-line"></div>
+
+      <div class="info-block code">
+        <h2 class="title skills-title">Code example</h2>
+
+        <div class="info">
+          <pre class="code-expample">
+            const isEven = (number) => {
+              if (number === 1) return false;
+              if (number === 2) return true;
+              if (number === 3) return false;
+              if (number === 4) return true;
+              if (number === 5) return false;
+              if (number === 6) return true;
+              if (number === 7) return false;
+              if (number === 8) return true;
+              if (number === 9) return false;
+              if (number === 10) return true;
+              if ...
+            }
+          </pre>
+        </div>
+      </div>
+
+      <div class="vertical-line"></div>
 
       <h2>6. Work Experience</h2>
       <p>I have 2 month work experience as Frontend developer.</p>
