feat: change languages section

--- a/index.html
+++ b/index.html
@@ -186,17 +186,16 @@
 
       <div class="vertical-line"></div>
 
-      <h2>6. Work Experience</h2>
-      <p>I have 2 month work experience as Frontend developer.</p>
+      <div class="info-block">
+        <h2>Languages</h2>
 
-      <h2>7. Education</h2>
-      <p>I have bachelor and master degrees of Information Technology.</p>
-
-      <h2>8. Languages</h2>
-      <ul>
-        <li>Russian (native)</li>
-        <li>English (A2~B1)</li>
-      </ul>
+        <div class="info">
+          <div class="skills-list">
+            <div class="skill">Russian (native)</div>
+            <div class="skill">English (A2~B1)</div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
