feat: move one block into header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Rs School CV</title>
   </head>
   <body>
-    <main>
+    <header>
       <h1 class="fullname">Lyan Alexandr</h1>
 
       <p class="position">Front-End Developer</p>
@@ -71,7 +71,9 @@
       </div>
 
       <div class="underheader-vertical-line"></div>
+    </header>
 
+    <main>
       <div class="info-block about-me">
         <h2 class="title about-title">About me</h2>
 
