--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
       </div>
 
-      <div class="underheader-vertical-line"></div>
+      <div class="fullwidth-vertical-line"></div>
     </header>
 
     <main>
@@ -199,5 +199,38 @@
         </div>
       </div>
     </main>
+
+    <div class="fullwidth-vertical-line"></div>
+
+    <footer>
+      <a
+        class="social-link rs-school"
+        href="https://rs.school/courses/javascript-preschool-ru"
+        target="_blank"
+      >
+        <img
+          src="./img/rs-school-logo.svg"
+          alt="rs-school logo"
+          width="80px"
+          height="40px"
+        />
+      </a>
+
+      <p>2024</p>
+
+      <a
+        class="social-link github"
+        href="https://github.com/Sanechek1337"
+        target="_blank"
+      >
+        <img
+          src="./img/github-logo.svg"
+          alt="github logo"
+          width="14"
+          height="14"
+        />
+        /Sanechek1337
+      </a>
+    </footer>
   </body>
 </html>
