--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" >
     <meta
       name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+      content="width=device-width"
+    >
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" >
+    <link rel="stylesheet" href="./css/normalize.css" >
+    <link rel="stylesheet" href="./css/style.css" >
     <title>Rs School CV</title>
   </head>
   <body>
@@ -20,12 +20,12 @@
       <div class="contacts">
         <div class="email-location-block">
           <div class="email-location location">
-            <img src="./img/map-icon.svg" alt="map icon" />
+            <img src="./img/map-icon.svg" alt="map icon" >
             <p>Kazakhstan, Kokshetau</p>
           </div>
 
           <div class="email-location email">
-            <img src="./img/email-icon.svg" alt="email icon" />
+            <img src="./img/email-icon.svg" alt="email icon" >
             <p>rednaxela659@gmail.com</p>
           </div>
         </div>
@@ -36,7 +36,7 @@
             href="https://www.linkedin.com/in/lyan-alexandr/"
             target="_blank"
           >
-            <img src="./img/linkedin-logo.svg" alt="linkedin logo" />
+            <img src="./img/linkedin-logo.svg" alt="linkedin logo" >
             /lyan-alexandr
           </a>
 
@@ -45,7 +45,7 @@
             href="https://t.me/ElPsyKongroo1"
             target="_blank"
           >
-            <img src="./img/tg-logo.svg" alt="telegram logo" />
+            <img src="./img/tg-logo.svg" alt="telegram logo" >
             @ElPsyKongroo1
           </a>
 
@@ -59,12 +59,12 @@
               alt="github logo"
               width="14"
               height="14"
-            />
+            >
             /Sanechek1337
           </a>
 
           <a class="social-link discord" href="#">
-            <img src="./img/discord-logo.svg" alt="discord logo" />
+            <img src="./img/discord-logo.svg" alt="discord logo" >
             Alexandr (Sanechek1337)
           </a>
         </div>
@@ -96,7 +96,7 @@
               Abay Myrzakhmetov Kokshetau University - Bachelor's degree, IT
             </p>
             <p class="date-info">
-              <img src="./img/calendar-icon.svg" alt="calendar icon" />
+              <img src="./img/calendar-icon.svg" alt="calendar icon" >
               2018 - 2021
             </p>
           </div>
@@ -106,7 +106,7 @@
               Shokan Ualikhanov Kokshetau State University - Master's degree, IT
             </p>
             <p class="date-info">
-              <img src="./img/calendar-icon.svg" alt="calendar icon" />
+              <img src="./img/calendar-icon.svg" alt="calendar icon" >
               2021 - 2023
             </p>
           </div>
@@ -124,7 +124,7 @@
               Shokan Ualikhanov Kokshetau State University - Front-End Developer
             </p>
             <p class="date-info">
-              <img src="./img/calendar-icon.svg" alt="calendar icon" />
+              <img src="./img/calendar-icon.svg" alt="calendar icon" >
               Sep 2023 - Present
             </p>
           </div>
@@ -134,7 +134,7 @@
               Abay Myrzakhmetov Kokshetau University - System Technician
             </p>
             <p class="date-info">
-              <img src="./img/calendar-icon.svg" alt="calendar icon" />
+              <img src="./img/calendar-icon.svg" alt="calendar icon" >
               Jul 2021 - Dec 2022
             </p>
           </div>
@@ -211,9 +211,9 @@
         <img
           src="./img/rs-school-logo.svg"
           alt="rs-school logo"
-          width="80px"
-          height="40px"
-        />
+          width="80"
+          height="40"
+        >
       </a>
 
       <p>2024</p>
@@ -228,7 +228,7 @@
           alt="github logo"
           width="14"
           height="14"
-        />
+        >
         /Sanechek1337
       </a>
     </footer>
