refactor: change links, skills, languages lists from div to ul

--- a/index.html
+++ b/index.html
@@ -30,44 +30,52 @@
           </div>
         </div>
 
-        <div class="social-links">
-          <a
-            class="social-link linkedin"
-            href="https://www.linkedin.com/in/lyan-alexandr/"
-            target="_blank"
-          >
-            <img src="./img/linkedin-logo.svg" alt="linkedin logo" >
-            /lyan-alexandr
-          </a>
-
-          <a
-            class="social-link tg"
-            href="https://t.me/ElPsyKongroo1"
-            target="_blank"
-          >
-            <img src="./img/tg-logo.svg" alt="telegram logo" >
-            @ElPsyKongroo1
-          </a>
-
-          <a
-            class="social-link github"
-            href="https://github.com/Sanechek1337"
-            target="_blank"
-          >
-            <img
-              src="./img/github-logo.svg"
-              alt="github logo"
-              width="14"
-              height="14"
+        <ul class="social-links">
+          <li>
+            <a
+              class="social-link linkedin"
+              href="https://www.linkedin.com/in/lyan-alexandr/"
+              target="_blank"
             >
-            /Sanechek1337
-          </a>
+              <img src="./img/linkedin-logo.svg" alt="linkedin logo" >
+              /lyan-alexandr
+            </a>
+          </li>
 
-          <a class="social-link discord" href="#">
-            <img src="./img/discord-logo.svg" alt="discord logo" >
-            Alexandr (Sanechek1337)
-          </a>
-        </div>
+          <li>
+            <a
+              class="social-link tg"
+              href="https://t.me/ElPsyKongroo1"
+              target="_blank"
+            >
+              <img src="./img/tg-logo.svg" alt="telegram logo" >
+              @ElPsyKongroo1
+            </a>
+          </li>
+
+          <li>
+            <a
+              class="social-link github"
+              href="https://github.com/Sanechek1337"
+              target="_blank"
+            >
+              <img
+                src="./img/github-logo.svg"
+                alt="github logo"
+                width="14"
+                height="14"
+              >
+              /Sanechek1337
+            </a>
+          </li>
+
+          <li>
+            <a class="social-link discord" href="#">
+              <img src="./img/discord-logo.svg" alt="discord logo" >
+              Alexandr (Sanechek1337)
+            </a>
+          </li>
+        </ul>
       </div>
 
       <div class="fullwidth-vertical-line"></div>
@@ -147,18 +155,18 @@
         <h2 class="title skills-title">Skills</h2>
 
         <div class="info">
-          <div class="skills-list">
-            <div class="skill">HTML</div>
-            <div class="skill">CSS</div>
-            <div class="skill">JavaScript</div>
-            <div class="skill">TypeScript</div>
-            <div class="skill">React</div>
-            <div class="skill">Redux</div>
-            <div class="skill">Git</div>
-            <div class="skill">Material UI</div>
-            <div class="skill">Mantine UI</div>
-            <div class="skill">NextJS</div>
-          </div>
+          <ul class="skills-list">
+            <li class="skill">HTML</li>
+            <li class="skill">CSS</li>
+            <li class="skill">JavaScript</li>
+            <li class="skill">TypeScript</li>
+            <li class="skill">React</li>
+            <li class="skill">Redux</li>
+            <li class="skill">Git</li>
+            <li class="skill">Material UI</li>
+            <li class="skill">Mantine UI</li>
+            <li class="skill">NextJS</li>
+          </ul>
         </div>
       </div>
 
@@ -192,10 +200,10 @@
         <h2>Languages</h2>
 
         <div class="info">
-          <div class="skills-list">
-            <div class="skill">Russian (native)</div>
-            <div class="skill">English (A2~B1)</div>
-          </div>
+          <ul class="skills-list">
+            <li class="skill">Russian (native)</li>
+            <li class="skill">English (A2~B1)</li>
+          </ul>
         </div>
       </div>
     </main>
